# sample-agentic-cost-optimizer

./: .dockerignore  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  LOCAL_DEVELOPMENT.md  Makefile  README.md  code_quality_analysis.md  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.gitlab/: CICD_SETUP.md
.kiro-archive/: README.md
docs/: Agentic_Cost_Optimization.drawio  agent_observability_decisions_record.md  agentcore-ping-and-task-management.md  agentcore-ping-endpoint.md  agentcore_logging_investigation.md  cicd_pipeline.md  dedicated_tool and reliability_decision.md  event_journaling_guide.md  multi_agent_report_isolation_proposal.md  orchrestation_decisions_record.md
evals/: __init__.py  conftest.py  helpers.py  mock_data.py  test_analysis.py  test_report.py
infra/: .prettierignore  cdk.json  package-lock.json  package.json  prettier.config.mjs  tsconfig.json  vitest.config.mts  vitest.config.ts
requirements/: agents.txt
scripts/: build-deployment-package.sh  run-agent-locally.sh
src/: run_with_otel.py
tests/: conftest.py  test_agent_invoke.py  test_cloudwatch_logs_tool.py  test_cloudwatch_metrics_tool.py  test_gateway_journal.py  test_gateway_storage.py  test_interceptor.py  test_invoke_function.py  test_journal.py  test_lambda_cleanup_stuck_session.py  test_lambda_discovery_tool.py  test_lambda_invoker.py  test_lambda_session_initializer.py  test_mcp_client.py  test_pricing_tool.py  test_shared_config.py  test_shared_event_recorder.py  test_shared_event_validation.py  (+3 more)
(+92 files in other folders)
