[project]
name = "agentic-cost-optimizer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
agents = [
  "strands-agents",
  "strands-agents-tools",
  "bedrock-agentcore",
  "aws-opentelemetry-distro"
]
dev = [
  "ruff",
  "pre-commit",
  "pytest",
  "pytest-mock",
  "pytest-asyncio",
  "pytest-cov>=7.0.0",
]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]
fixable = ["ALL"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.coverage.run]
relative_files = true
