[project]
name = "agentic-cost-optimizer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
agents = [
  "strands-agents>=1.12.0",
  "strands-agents-tools>=0.2.11",
  "bedrock-agentcore>=1.0.7",
  "aws-opentelemetry-distro>=0.12.1"
]
dev = [
  "ruff>=0.14.0",
  "pre-commit>=4.3.0",
  "pytest>=8.4.2",
  "pytest-mock>=3.15.1",
  "pytest-asyncio>=1.2.0",
  "pytest-cov>=7.0.0",
]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]
fixable = ["ALL"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.coverage.run]
relative_files = true
